[package]
name = "pdftool"
version = "0.1.0"
authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

anyhow = "1.0.34"
itertools = "0.9.0"

lopdf = {version = "0.26.0", features = ["chrono_time"] }
image = "0.23.12"
chrono = "0.4.9"