[package]
name = "pdftool"
version = "0.3.0"
authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]
edition = "2021"


[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
argorder = { git = "https://github.com/kimotu4632uz/argorder.git" }

anyhow = { version = "1.0.68", features = ["backtrace"] }
itertools = "0.10.5"

lopdf = { version = "0.29.0", features = ["chrono_time"] }
image = "0.24.5"
chrono = "0.4.23"

